--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
         .text {
             font-size: 3.5rem;
-            font-weight: 300;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            font-weight: bold;
+            font-style: italic;
             color: rgb(255, 255, 255);
             letter-spacing: 0.1em;
             text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.3);
@@ -62,7 +64,7 @@
 </head>
 <body>
     <div class="text-container" id="textContainer">
-        <div class="text">ECHOES</div>
+        <div class="text">loading</div>
     </div>
 
     <script>
