--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <div class="text-container" id="textContainer">
-        <div class="text">loading</div>
+        <div class="text">loading...</div>
     </div>
 
     <script>
